--- a/app/src/main/res/layout/content_detail_movie.xml
+++ b/app/src/main/res/layout/content_detail_movie.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.DetailMovieActivity"
+    tools:context=".view.activity.DetailMovieActivity"
     tools:showIn="@layout/activity_detail_movie">
 
     <ProgressBar
