--- a/app/src/main/res/layout/item_container_popular.xml
+++ b/app/src/main/res/layout/item_container_popular.xml
@@ -31,7 +31,7 @@
             android:text="Popular"/>
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/popular_empty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,9 +54,9 @@
                 android:layout_marginBottom="8dp"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/popular_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
