--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -5,4 +5,8 @@
         android:id="@+id/menu_others"
         android:title="@string/menu_other_movie"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_room"
+        android:title="Room DB"
+        app:showAsAction="never"/>
 </menu>
